# LT-automation

./: README.md
Arla/: CMakeCache.txt  CPackSourceConfig.cmake  Makefile  testcode5
Arla/programering/: from skimage import transform as tf.py  handleFinder.py  main.cpp  recognized.txt  test.py  test2.py
Arla/simulering/: arla.rdk
Arla/testArla/: Arla0.1.script  Arla0.1.txt  Arla0.1.urp  Arla0.2.script  Arla0.2.txt  Arla0.2.urp  Arla0.3.script  Arla0.3.txt  Arla0.3.urp  Arla0.4.script  Arla0.4.txt  Arla0.4.urp  Arla0.7.script  Arla0.7.txt  Arla0.7.urp  Arla0.85.script  Arla0.85.txt  Arla0.85.urp  test.script  test.txt  test.urp
Vacutainer/: SimpleLive_Pyueye_OpenCV.py  class test.py  color.csv  recognized.txt  runClass.py  testNew.ini  vacuClassModule.py
testcode/: CMakeLists.txt  CPackConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  main.cpp
testcode5/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main.cpp  testcode5
